2002-10-04  Rob Browning  <rlb@defaultvalue.org>

	* boot-9.scm (expt): switch if sense and use negative? rather than
	>= 0.

2002-10-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (top-repl): Use "1" instead of "%deliver-signals" to
	limit the signal stack.

2002-09-15  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (feature?): Added deprecation message.

2002-09-14  Rob Browning  <rlb@defaultvalue.org>

	* boot-9.scm (sqrt): minor indentation fix.

2002-09-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* syncase.scm: Set the module transformer of the-syncase-module so
	that we can use define-syntax.
	(define-syntax-public): New and exported.

2002-09-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* syncase.scm (expansion-eval-closure, env->eval-closure): New.
	(sc-macro): Set the expansion-eval-closure expanding the form.
	(putprop, getprop): Use the expansion-eval-closure to find
	variables instead of the current module.

2002-07-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* slib.scm (make-exchanger): Added.  Thanks to Clinton Ebadi!

2002-07-07  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (define-option-interface): Replaced "macro" by
	mmacro.

2002-06-01  Gary Houston  <ghouston@arglist.com>

	* boot-9.scm (file-set-position): Make third argument optional,
	for SCM compatibility.
	(file-position): simplify definition.

2002-06-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (file-set-position): Use seek instead of fseek.

2002-05-09  Marius Vollmer  <mvo@zagadka.ping.de>

	* format.scm (format:out-inf-nan): New.
	(format:out-fixed, format:out-expon, format:out-general): Use it
	to print infs and nans.

	* boot-9.scm (unsetenv): New, for completeness.

2002-05-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* format.scm (format:fn-max): Increase to 400 so ~f and ~g can
	print long real numbers with large positive and negative
	exponents.

2002-05-06  Marius Vollmer  <mvo@zagadka.ping.de>
